updated README for e-commerce application